fixed spacing on signup offer section

--- a/assets/section-homepage-ingredients.css
+++ b/assets/section-homepage-ingredients.css
@@ -1,5 +1,5 @@
 	#ingredient-row .row{
-	Width: 100%;
+	width: 100%;
 	overflow-x: hidden;
 }
 
@@ -21,13 +21,10 @@
 	font-size: 25px;
 	font-weight: 700;
 }
- 
-h1{
-  font-size: 50px;
-}
 
 #ingredient-row{
 	display: flex;
+	flex-wrap: wrap;
 	margin-top: 60px;
 }
 
